--- a/app/src/main/res/layout/activity_receiving_order.xml
+++ b/app/src/main/res/layout/activity_receiving_order.xml
@@ -160,8 +160,7 @@
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_receiving_order"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/ll_receiving_order_search"/>
+                android:layout_height="match_parent"/>
 
     </com.andview.refreshview.XRefreshView>
 
