--- a/app/src/main/res/layout/layout_weight_choose.xml
+++ b/app/src/main/res/layout/layout_weight_choose.xml
@@ -5,21 +5,33 @@
 
     <Button
         android:id="@+id/btn_weight_choose_minus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="-"/>
+        android:layout_width="20dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="-"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:background="@drawable/btn_login_new"/>
 
     <EditText
         android:id="@+id/et_weight_choose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1.0"
+        android:textSize="16sp"
+        android:textColor="@color/black"
         android:inputType="number"/>
 
     <Button
         android:id="@+id/btn_weight_choose_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"/>
+        android:layout_width="20dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="+"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:background="@drawable/btn_login_new"/>
 
 </LinearLayout>
